Split games into verified and non-verified games

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -9,6 +9,11 @@
   @tailwind utilities;
 }
 
+.p-tabview-ink-bar {
+  background-color: rgb(190 242 100 / var(--tw-bg-opacity));
+  height: 4px;
+}
+
 
 
 
